# cache-dependencies

./: pyproject.toml
django_cache_dependencies/: __init__.py
django_cache_dependencies/templatetags/: cache_tagging_tags.py
django_cache_dependencies/tests/: __init__.py
